--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@react-router/node": "^7.9.4",
-    "isbot": "^5.1.27",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router": "^7.9.4"
+    "@react-router/node": "^7.10.1",
+    "@react-router/serve": "^7.10.1",
+    "isbot": "^5.1.32",
+    "match-sorter": "^8.0.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "react-router": "^7.10.1",
+    "sort-by": "^0.0.2",
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@netlify/vite-plugin": "^2.7.4",
