added the grey ok button remote.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "react-router build",
+    "build": "vite build",
+    "preview": "vite preview",
     "dev": "react-router dev",
     "start": "npm run dev",
     "typecheck": "react-router typegen && tsc"
